[package]
name = "phantomtask"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-core = "0.62.2"
clap = "4.5.51"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Variant",
    "Win32_System_RemoteDesktop"
]